--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
+    "multer": "^1.4.2",
     "pug": "^2.0.4"
   }
 }
